fix z-index for actions-nav

--- a/invoicetome/static/css/main.css
+++ b/invoicetome/static/css/main.css
@@ -399,15 +399,14 @@ a.button:active {
 }
 
 .actions-nav {
-    z-index: 9;
     top: 0;
     margin-bottom: 0;
     border-width: 1px 0 1px 0;
     border-radius: 0;
-    z-index: 19;
 }
 .actions-nav.affix {
     width: 100%;
+    z-index: 9;
 }
 .actions-nav.in {
     z-index: 7;
